--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "joliny-client",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
