--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.2",
     "express": "^4.18.2",
+    "ngx-mask": "^18.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
